fixed the hamburger menu div

--- a/Learnhall/Index.html
+++ b/Learnhall/Index.html
@@ -54,20 +54,25 @@
                 <div class="hamburger-menu-open">
                     <img src="images/open-hamburger.png" alt="menu-icon">
                 </div>
+                <div class="hamburger-menu-close">
+                    <img src="images/close-hamburger.png" alt="menu-icon">
+                </div>
             </div>    
         </div>
         <!-- hamburger menu -->
         <div class="nav-bar-hamburger-menu">
-            <ul>
-                <li><a class="nav-selected" href="">Home</a></li> <!-- link -->
-                <li><a href="">Book a Session</a></li> <!-- link -->
-                <li><a href="">Become a Tuter</a></li> <!-- link -->
-                <li><a href="">Blog</a></li> <!-- link -->
-                <li>
-                    <img src="images/contact.png" alt="phone-icon-hamburger">
-                    <span>503-342-7214</span>
-                </li> <!-- Call feature -->
-            </ul>
+            <div class="hamburger-menu">
+                <ul>
+                    <li><a class="nav-selected" href="">Home</a></li> <!-- link -->
+                    <li><a href="">Book a Session</a></li> <!-- link -->
+                    <li><a href="">Become a Tuter</a></li> <!-- link -->
+                    <li><a href="">Blog</a></li> <!-- link -->
+                    <li>
+                        <img src="images/contact.png" alt="phone-icon-hamburger">
+                        <span>503-342-7214</span>
+                    </li> <!-- Call feature -->
+                </ul>
+            </div>
         </div>
     </header>
     
