added the jquerry and scripts javascript links

--- a/Learnhall/Index.html
+++ b/Learnhall/Index.html
@@ -52,7 +52,7 @@
 
                 <!-- hamburger icon -->
                 <div class="hamburger-menu-open">
-                    <img src="images/open-hamburger.png" alt="menu-icon">
+                    <img id="open-hamburger" src="images/open-hamburger.png" alt="menu-icon">
                 </div>
                 <div class="hamburger-menu-close">
                     <img src="images/close-hamburger.png" alt="menu-icon">
@@ -77,4 +77,6 @@
     </header>
     
 </body>
+<script src="javascript/JQuery.js"></script>
+<script src="javascript/script.js"></script>
 </html>
