added learnhall info section

--- a/Learnhall/Index.html
+++ b/Learnhall/Index.html
@@ -14,6 +14,7 @@
 
     <!-- Links to Stylesheets -->
     <link rel="stylesheet" href="CSS/Header.css">
+    <link rel="stylesheet" href="CSS/learnhall-info.css">
 
     <!--Links to Mediaquerries-->
     <link rel="stylesheet" href="CSS/MediaQuerries.css">
@@ -75,7 +76,33 @@
             </div>
         </div>
     </header>
-    
+
+    <!-- Info section -->
+    <section class="learnhall-info">
+        <!-- images -->
+        <div class="learnhall-info-images">
+            <img class="background-img1" src="images/Background-image1.png"  alt="background-image">
+            <div class="model-container">
+                    <img class="brown-image" src="images/Brown-rectangle.png" alt="Design-image">
+                    <img class="modelbackground-image" src="images/model-background.png" alt="Design-image">
+                    <img class="model1-image" src="images/model1.png" alt="Design-image">
+            </div>
+        </div>
+
+        <!-- text -->
+        <div class="container">
+            <div class="learnhall-info-text">
+                <div class="text">
+                    <span class="heading">Tutoring Done Right</span>
+                    <span class="sub-text">Private in-person & online tutoring</span>
+                    <p>If you want to learn an academic subject or study for an exam, we want to be the company you choose. 
+                    Our tutors are bright and enthusiastic and seek to bring out the best of the individual learner's potential 
+                    in both academics as well as life.</p>
+                    <button><a href=""> Book a Session</a></button> <!-- link -->
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 <script src="javascript/JQuery.js"></script>
 <script src="javascript/script.js"></script>
