added background img's, added an id to close-hamb

--- a/Learnhall/Index.html
+++ b/Learnhall/Index.html
@@ -56,7 +56,7 @@
                     <img id="open-hamburger" src="images/open-hamburger.png" alt="menu-icon">
                 </div>
                 <div class="hamburger-menu-close">
-                    <img src="images/close-hamburger.png" alt="menu-icon">
+                    <img id="close-hamburger" src="images/close-hamburger.png" alt="menu-icon">
                 </div>
             </div>    
         </div>
@@ -80,6 +80,10 @@
     <!-- Info section -->
     <section class="learnhall-info">
         <!-- images -->
+        <div class="circle-img">
+            <img class="orange-img1" src="images/orange-circle.png"  alt="background-image">
+            <img class="orange-img2" src="images/orange-circle-right.png" alt="background-image">
+        </div>
         <div class="learnhall-info-images">
             <img class="background-img1" src="images/Background-image1.png"  alt="background-image">
             <div class="model-container">
@@ -103,6 +107,7 @@
             </div>
         </div>
     </section>
+    
 </body>
 <script src="javascript/JQuery.js"></script>
 <script src="javascript/script.js"></script>
