added links to the circles around model

--- a/Learnhall/Index.html
+++ b/Learnhall/Index.html
@@ -86,6 +86,16 @@
         </div>
         <div class="learnhall-info-images">
             <img class="background-img1" src="images/Background-image1.png"  alt="background-image">
+            <!-- top circles around the model -->
+            <img class="orange-circle" src="images/orange-circle.png"  alt="background-image">
+            <img class="brown-circle" src="images/brown-circle.png"  alt="background-image">
+            <img class="blue-circle" src="images/blue-circle.png"  alt="background-image">
+            <!-- bottom circles around model -->
+            <img class="orange-circle-1" src="images/orange-circle.png"  alt="background-image">
+            <img class="brown-circle-1" src="images/brown-circle.png"  alt="background-image">
+            <img class="blue-circle-1" src="images/blue-circle.png"  alt="background-image">
+           
+
             <div class="model-container">
                     <img class="brown-image" src="images/Brown-rectangle.png" alt="Design-image">
                     <img class="modelbackground-image" src="images/model-background.png" alt="Design-image">
