--- a/Learnhall/Index.html
+++ b/Learnhall/Index.html
@@ -152,10 +152,20 @@
 
         <section class="service-works">
             <div class="img">
+                <img class="line" src="images/Line 11.png" alt="">
                 <img class="background-brown" src="images/brown-circle-bottom.png" alt="background img">
                 <img class="background-right" src="images/brown-circle-right.png" alt="background img">
                 <img class="mdl-background" src="images/model-background.png" alt="background img">
                 <img class="mdl" src="images/model-2.png" alt="model img">
+                <img class="background-brown-2" src="images/brown-circle.png" alt="background img">
+                <!-- top circles around model -->
+                <img class="orange-circle" src="images/orange-circle.png"  alt="background-image">
+                <img class="brown-circle" src="images/brown-circle.png"  alt="background-image">
+                <img class="blue-circle" src="images/blue-circle.png"  alt="background-image">
+                <!-- bottom circles around model -->
+                <img class="orange-circle-1" src="images/orange-circle.png"  alt="background-image">
+                <img class="brown-circle-1" src="images/brown-circle.png"  alt="background-image">
+                <img class="blue-circle-1" src="images/blue-circle.png"  alt="background-image">
             </div>
             <div class="text">
                 <h2>How our service works</h2>
@@ -174,11 +184,8 @@
                             <p>{{step.text}}</p>
                         </div>
                     </div>
-
                     </div>
-
                 </div>
-
             </div>
 
         </section>
