--- a/Learnhall/Index.html
+++ b/Learnhall/Index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="CSS/learnhall-info.css">
     <link rel="stylesheet" href="CSS/Choose-us.css">
     <link rel="stylesheet" href="CSS/Our-service.css">
+    <link rel="stylesheet" href="CSS/Become-tutor.css">
 
     <!--Links to Mediaquerries-->
     <link rel="stylesheet" href="CSS/MediaQuerries.css">
@@ -131,9 +132,7 @@
                     </p>
                 </div>
                 <div class="holder-1">
-                    <div 
-                    class="widgets-1"
-                    >
+                    <div class="widgets-1">
                         <div 
                         v-for= "component in components"
                         class="widget-box">
@@ -141,11 +140,8 @@
                             <img class="logo-img" :src="component.img2" alt="logo"> 
                             <h4>{{component.title}}</h4>
                             <p>{{component.text}}</p>
-    
                         </div>
-                        
                     </div>
-
                 </div>
             </div>
         </section>
@@ -174,17 +170,40 @@
             <div class="container">
                 <div class="steps">
                     <div class="steps-container">
-                    <div 
-                    v-for=" step in steps"
-                    class="step-box">
-                        <img class="background-img" :src="step.img1" alt="background img">
-                        <img class="number" :src="step.img2" alt="number img">
-                        <div class="steps-text">
-                            <h4>{{step.title}}</h4>
-                            <p>{{step.text}}</p>
+                        <div 
+                        v-for=" step in steps"
+                        class="step-box">
+                            <img class="background-img" :src="step.img1" alt="background img">
+                            <img class="number" :src="step.img2" alt="number img">
+                            <div class="steps-text">
+                                <h4>{{step.title}}</h4>
+                                <p>{{step.text}}</p>
+                            </div>
                         </div>
                     </div>
-                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="become-tutor">
+            <div class="img">
+                <img class="background-img" src="images/Background-image1.png" alt="background img">
+                <img class="brown-background" src="images/Brown-rectangle.png" alt="">
+                <img class="mdl-background" src="images/model-background.png" alt="background img">
+                <img class="mdl" src="images/Tutor-student.png" alt="background img">
+            </div>
+            <div class="container">
+                <div class="text">
+                    <h2>Want to become a tutor with Learnhall?</h2>
+                    <p>We hire tutors from a variety of backgrounds both in the US and internationally. 
+                        We pride ourselves on our tutor onboarding process and high industry pay. 
+                        Our tutors work in-person and online, and we garner regular inquiries for all academic
+                        and test prep subjects at all age levels.
+                        <br>
+                        <br>
+                        If you want to work with us, please click the button bellow to fill out a short form and we will be in contact within 24-48 hours for a prospective interview.
+                    </p>
+                    <button><a href=""> Become a Tutor</a></button> <!-- Link -->
                 </div>
             </div>
 
