added background img and alternate text

--- a/Learnhall/Index.html
+++ b/Learnhall/Index.html
@@ -187,6 +187,18 @@
 
         <section class="become-tutor">
             <div class="img">
+                <div class="circle-img">
+                    <img class="orange-img1" src="images/orange-circle.png"  alt="background-image">
+                    <img class="orange-img2" src="images/orange-circle-right.png" alt="background-image">
+                </div>
+                <img class="orange-circle" src="images/orange-circle.png"  alt="background-image">
+                <img class="brown-circle" src="images/brown-circle.png"  alt="background-image">
+                <img class="blue-circle" src="images/blue-circle.png"  alt="background-image">
+                <!-- bottom circles around model -->
+                <img class="orange-circle-1" src="images/orange-circle.png"  alt="background-image">
+                <img class="brown-circle-1" src="images/brown-circle.png"  alt="background-image">
+                <img class="blue-circle-1" src="images/blue-circle.png"  alt="background-image">
+                
                 <img class="background-img" src="images/Background-image1.png" alt="background img">
                 <img class="brown-background" src="images/Brown-rectangle.png" alt="">
                 <img class="mdl-background" src="images/model-background.png" alt="background img">
@@ -201,8 +213,11 @@
                         and test prep subjects at all age levels.
                         <br>
                         <br>
-                        If you want to work with us, please click the button bellow to fill out a short form and we will be in contact within 24-48 hours for a prospective interview.
+                        If you want to work with us, please click the button bellow to fill out a short form and 
+                        we will be in contact within 24-48 hours for a prospective interview.
                     </p>
+                    <p class="small-text">If you want to work with us, please click the button bellow to fill out 
+                        a short form and we will be in contact within 24-48 hours for a prospective interview.</p>
                     <button><a href=""> Become a Tutor</a></button> <!-- Link -->
                 </div>
             </div>
