created a new section

--- a/Learnhall/Index.html
+++ b/Learnhall/Index.html
@@ -186,6 +186,10 @@
             </div>
         </section>
 
+        <section>
+            
+        </section>
+
         <section class="become-tutor">
             <div class="img">
                 <div class="circle-img">
@@ -224,7 +228,6 @@
             </div>
         </section>
 
-        
         <footer>
             <div class="container">
                 <div class="logo-image-1">
