added parent reviews section

--- a/Learnhall/Index.html
+++ b/Learnhall/Index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="CSS/learnhall-info.css">
     <link rel="stylesheet" href="CSS/Choose-us.css">
     <link rel="stylesheet" href="CSS/Our-service.css">
+    <link rel="stylesheet" href="CSS/Parent-reviews.css">
     <link rel="stylesheet" href="CSS/Become-tutor.css">
     <link rel="stylesheet" href="CSS/Footer.css">
 
@@ -186,8 +187,21 @@
             </div>
         </section>
 
-        <section>
-            
+        <section class="parent-reviews">
+            <div class="container">
+                <div class="text">
+                    <h2>What parents are saying</h2>
+                    <p>Read the reviews below to see what student's parents are saying about Learnhall on Google for our tutoring services.</p>
+                </div>
+
+                <div class="slider">
+                    <div class="content">
+                        
+
+                    </div>
+
+                </div>
+            </div>
         </section>
 
         <section class="become-tutor">
@@ -239,7 +253,7 @@
                     <a href="Index.html">Learnhall</a>
                 </div>
 
-                <div class="connect">
+                <div class="connect connect-right">
                     <span>Let's Connect</span>
                     <div 
                     v-for="connect in letsConnect"
@@ -249,7 +263,7 @@
                     </div>
                 </div>
 
-                <div class="connect">
+                <div class="connect-1">
                     <span>Contact Us</span>
                     <div 
                     v-for="contact in contactUs"
