added parent revies slider

--- a/Learnhall/Index.html
+++ b/Learnhall/Index.html
@@ -141,7 +141,7 @@
                             <img class="background-img" :src="component.img1" alt="background-img">
                             <img class="logo-img" :src="component.img2" alt="logo"> 
                             <h4>{{component.title}}</h4>
-                            <p>{{component.text}}</p>
+                            <p>{{component.text}} </p>
                         </div>
                     </div>
                 </div>
@@ -196,7 +196,15 @@
 
                 <div class="slider">
                     <div class="content">
-                        
+                        <img class="parent-mdl" src="images/parent-mdl.jpg" alt="mdl img">
+                        <div class="stars">
+                            <h4>Kim K.</h4> 
+                            <img src="images/star-1.png" alt="img">
+                        </div>
+                        <div class="text">
+                            <p>"Thanks to the encouraging and fun atmosphere Mike creates around math, my
+                            kid has gone from absolute dread and tears to believing in himself. I never thought I'd see him laughing and cheering"</p>
+                        </div>
 
                     </div>
 
