--- a/Learnhall/Index.html
+++ b/Learnhall/Index.html
@@ -47,10 +47,10 @@
                     <!-- nav bar area -->
                     <div class="nav-bar">
                         <ul>
-                            <li><a class="nav-selected" href="Index.html">Home</a></li> 
-                            <li><a href="pages/Book a Session.html">Book a Session</a></li> 
-                            <li><a href="pages/Become a Tutor.html">Become a Tuter</a></li> 
-                            <li><a href="pages/Blog.html">Blog</a></li>
+                            <li><a class="nav" href="Index.html">Home</a></li> 
+                            <li><a class="nav" href="pages/Book a Session.html">Book a Session</a></li> 
+                            <li><a class="nav" href="pages/Become a Tutor.html">Become a Tuter</a></li> 
+                            <li><a class="nav" href="pages/Blog.html">Blog</a></li>
                             <li>
                                 <img src="images/contact.png" alt="phone-icon">
                                 <span><a href="tel:503-342-7214">503-342-7214</a></span>
@@ -189,7 +189,7 @@
 
         <section class="parent-reviews">
             <div class="container">
-                <div class="text">
+                <div class="text-1">
                     <h2>What parents are saying</h2>
                     <p>Read the reviews below to see what student's parents are saying about Learnhall on Google for our tutoring services.</p>
                 </div>
@@ -198,10 +198,14 @@
                     <div 
                     v-for=" review in parentsReview"
                     class="content">
-                        <img class="parent-mdl" :src="review.img" alt="mdl img">
                         <div class="stars">
-                            <h4>{{review.name}}</h4> 
-                            <img src="images/star-1.png" alt="img">
+                            <div class="mdl">
+                                <img class="parent-mdl" :src="review.img" alt="mdl img">
+                            </div>
+                            <div class="name">
+                                <h4>{{review.name}}</h4> 
+                                <img src="images/star-1.png" alt="img">
+                            </div>
                         </div>
                         <div class="text">
                             <p class="review-text">"{{review.text}}"... <span class="read-more">read more.</span></p>
