fixed the book a session img link issue

--- a/pages/Book a Session.html
+++ b/pages/Book a Session.html
@@ -162,17 +162,17 @@
                 <div class="connect connect-right">
                     <span>Let's Connect</span>
                     <div v-for="connect in letsConnect" class="img">
-                        <a class="img-1 prev" :href="'../' + connect.link"><img :src="'../' + connect.img1" alt="link"></a>
-                        <a class="img-2 prev" :href="'../' + connect.link"><img :src="'../' + connect.img2" alt="link"></a>
+                        <a class="img-1" :href="'../' + connect.link"><img :src="'../' + connect.img1" alt="link"></a>
+                        <a class="img-2" :href="'../' + connect.link"><img :src="'../' + connect.img2" alt="link"></a>
                     </div>
                 </div>
     
                 <div class="connect-1">
                     <span>Contact Us</span>
                     <div v-for="contact in contactUs" class="img">
-                        <a class="img-1 prev" :href="'../' + contact.link"><img :src="'../' + contact.img1" alt="link"></a>
-                        <a class="img-2 prev" :href="'../' + contact.link"><img :src="'../' + contact.img2" alt="link"></a>
-                        <a class="img-3 prev" :href="'../' + contact.link"><img :src="'../' + contact.img3" alt=""></a>
+                        <a class="img-1" :href="'../' + contact.link"><img :src="'../' + contact.img1" alt="link"></a>
+                        <a class="img-2" :href="'../' + contact.link"><img :src="'../' + contact.img2" alt="link"></a>
+                        <a class="img-3" :href="'../' + contact.link"><img :src="'../' + contact.img3" alt=""></a>
                         <!-- Fix links -->
                     </div>
                 </div>
