Finished the become a tutor page without the thank you card popping up after submit.

--- a/pages/Become a Tutor.html
+++ b/pages/Become a Tutor.html
@@ -16,8 +16,8 @@
     <!-- Links to Stylesheets -->
     <link rel="stylesheet" href="../CSS/MediaQuerries.css">
     <link rel="stylesheet" href="../CSS/Header.css">
-    <link rel="stylesheet" href="../CSS/Become-tutor.css">
     <link rel="stylesheet" href="../CSS/Footer.css">
+    <link rel="stylesheet" href="../CSS/Become-tutor.css">
 
     <!--Links to Mediaquerries-->
     <link rel="stylesheet" href="CSS/MediaQuerries.css">
@@ -139,14 +139,26 @@
                 <div class="become-a-tutor-contact">
                     <h3>Why Join Us?</h3>
                     <p>Make money while making a difference in students lives.</p>
-                    <a href="tel:503-342-7214" class="phone-card">
-                        <img src="../images/icon _phone_.png" alt="phone-icon">
-                        <span>503-342-7214</span>
-                    </a>
-                    <a href="mailto:info@learnhall.com" class="email-card">
-                        <img src="../images/icon _email message inbox_.png" alt="email-icon">
-                        <span>info@learnhall.com</span>
-                    </a>
+                    <div>
+                        <div class="img-box orange">
+                            <img src="../images/dollar-sign.png" alt="dollar-icon">
+                        </div>
+                        <span>Earn a Steady Income</span>
+                        <div class="hr"></div>
+                    </div>
+                    <div>
+                        <div class="img-box blue">
+                            <img src="../images/briefcase.png" alt="briefcase-icon">
+                        </div>
+                        <span>Work from Anywhere</span>
+                        <div class="hr"></div>
+                    </div>
+                    <div>
+                        <div class="img-box brown">
+                            <img src="../images/student-cap.png" alt="student-cap-icon">
+                        </div>
+                        <span>Help Students Succeed</span>
+                    </div>
                 </div>
             </div>
         </section>
@@ -243,5 +255,11 @@
 
     </main>
 </body>
+
+<script src="../Javascript/JQuery.js"></script>
+<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+<script src="../Javascript/Vue.js"></script>
+<script src="../Javascript/script.js"></script>
+<script src="../Javascript/book-a-session.js"></script>
 
 </html>
