--- a/pages/Become a Tutor.html
+++ b/pages/Become a Tutor.html
@@ -71,7 +71,7 @@
                     <ul>
                         <li><a class="nav-selected" href="../Index.html">Home</a></li>
                         <li><a href="Book a Session.html">Book a Session</a></li>
-                        <li><a href="Become a Tutor.html">Become a Tuter</a></li>
+                        <li><a href="Become a Tutor.html">Become a Tutor</a></li>
                         <li><a href="Blog.html">Blog</a></li>
                         <li>
                             <img src="../images/contact.png" alt="phone-icon-hamburger">
@@ -260,6 +260,6 @@
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 <script src="../Javascript/Vue.js"></script>
 <script src="../Javascript/script.js"></script>
-<script src="../Javascript/book-a-session.js"></script>
+<script src="../Javascript/become-a-tutor.js"></script>
 
 </html>
