--- a/pages/Become a Tutor.html
+++ b/pages/Become a Tutor.html
@@ -47,7 +47,7 @@
                         <ul>
                             <li><a class="nav" href="../Index.html">Home</a></li>
                             <li><a class="nav" href="Book a Session.html">Book a Session</a></li>
-                            <li><a class="nav" href="Become a Tutor.html">Become a Tuter</a></li>
+                            <li><a class="nav" href="Become a Tutor.html">Become a Tutor</a></li>
                             <li><a class="nav" href="Blog.html">Blog</a></li>
                             <li>
                                 <img src="../images/contact.png" alt="phone-icon">
