changed blog.html to FAQ's.html

--- a/pages/Become a Tutor.html
+++ b/pages/Become a Tutor.html
@@ -8,7 +8,7 @@
 
     <!-- Favcon image and text -->
     <link rel="icon" href="../images/Logo.png" type="image/png">
-    <title>Learnhall Book a Tutor</title>
+    <title>Learnhall Become a Tutor</title>
 
     <!-- font link -->
     <link rel="stylesheet" href="https://use.typekit.net/xea2kuh.css">
@@ -48,7 +48,7 @@
                             <li><a class="nav" href="../Index.html">Home</a></li>
                             <li><a class="nav" href="Book a Session.html">Book a Session</a></li>
                             <li><a class="nav" href="Become a Tutor.html">Become a Tutor</a></li>
-                            <li><a class="nav" href="Blog.html">Blog</a></li>
+                            <li><a class="nav" href="FAQ's.html">Blog</a></li>
                             <li>
                                 <img src="../images/contact.png" alt="phone-icon">
                                 <span><a href="tel:503-342-7214">503-342-7214</a></span>
@@ -72,7 +72,7 @@
                         <li><a class="nav-selected" href="../Index.html">Home</a></li>
                         <li><a href="Book a Session.html">Book a Session</a></li>
                         <li><a href="Become a Tutor.html">Become a Tutor</a></li>
-                        <li><a href="Blog.html">Blog</a></li>
+                        <li><a href="FAQ's.html">Blog</a></li>
                         <li>
                             <img src="../images/contact.png" alt="phone-icon-hamburger">
                             <span><a href="tel:503-342-7214">503-342-7214</a></span>
@@ -196,9 +196,9 @@
                     <div class="text">
                         <h4>About Us</h4>
                         <ul>
-                            <li><a href="./Blog.html">FAQs</a></li>
-                            <li><a href="./Blog.html">Blog</a></li>
-                            <li><a href="./Blog.html">Reviews</a></li>
+                            <li><a href="./FAQ's.html">FAQs</a></li>
+                            <li><a href="./FAQ's.html">Blog</a></li>
+                            <li><a href="./FAQ's.html">Reviews</a></li>
                         </ul>
                     </div>
                     <div class="text">
@@ -221,10 +221,14 @@
 
                 </div>
 
-                <!--  <div class="email">
-                    
-    
-                </div > -->
+                <form id="jquery_form" class="email">
+                    <h4 > Subscribe to our free e-newsletter</h4>
+                    <div>
+                         <input type="email" placeholder="email address" name="email"> 
+                        <button id="subscribe-submit" type="submit" name="send">Subscribe</button>
+
+                    </div>
+                </form > 
 
                 <hr>
 
