changed html pages color and titles

--- a/pages/Book a Session.html
+++ b/pages/Book a Session.html
@@ -46,11 +46,10 @@
                     <!-- nav bar area -->
                     <div class="nav-bar">
                         <ul>
-                            <li><a class="nav" href="../Index.html">Home</a></li>
-                            <li><a class="nav book-session-header" href="./Book a Session.html">Book a
-                                    Session</a></li>
-                            <li><a class="nav" href="./Become a Tutor.html">Become a Tutor</a></li>
-                            <li><a class="nav" href="./FAQ's.html">Blog</a></li>
+                            <li><a href="../Index.html">Home</a></li>
+                            <li><a class="nav book-session-header" style="color: #070A13" href="./Book a Session.html">Book aSession</a></li>
+                            <li><a href="./Become a Tutor.html">Become a Tutor</a></li>
+                            <li><a href="./FAQ's.html">Blog</a></li>
                             <li>
                                 <img src="../images/contact.png" alt="phone-icon">
                                 <span><a href="tel:503-342-7214">503-342-7214</a></span>
@@ -71,8 +70,8 @@
             <div class="nav-bar-hamburger-menu">
                 <div class="hamburger-menu">
                     <ul>
-                        <li><a class="nav-selected" href="../Index.html">Home</a></li>
-                        <li><a href="./Book a Session.html">Book a Session</a></li>
+                        <li><a href="../Index.html">Home</a></li>
+                        <li><a style="color: #070A13" href="./Book a Session.html">Book a Session</a></li>
                         <li><a href="./Become a Tutor.html">Become a Tutor</a></li>
                         <li><a href="./FAQ's.html">Blog</a></li>
                         <li>
