--- a/Index.html
+++ b/Index.html
@@ -47,10 +47,10 @@
                     <!-- nav bar area -->
                     <div class="nav-bar">
                         <ul>
-                            <li><a class="nav" href="Index.html">Home</a></li> 
-                            <li><a class="nav" href="pages/Book a Session.html">Book a Session</a></li> 
-                            <li><a class="nav" href="pages/Become a Tutor.html">Become a Tuter</a></li> 
-                            <li><a class="nav" href="pages/FAQ's.html">Blog</a></li>
+                            <li><a style="color: #070A13" href="Index.html">Home</a></li> 
+                            <li><a href="pages/Book a Session.html">Book a Session</a></li> 
+                            <li><a href="pages/Become a Tutor.html">Become a Tuter</a></li> 
+                            <li><a href="pages/FAQ's.html">Blog</a></li>
                             <li>
                                 <img src="images/contact.png" alt="phone-icon">
                                 <span><a href="tel:503-342-7214">503-342-7214</a></span>
@@ -71,7 +71,7 @@
             <div class="nav-bar-hamburger-menu">
                 <div class="hamburger-menu">
                     <ul>
-                        <li><a class="nav-selected" href="Index.html">Home</a></li> 
+                        <li><a style="color: #070A13" href="Index.html">Home</a></li> 
                         <li><a href="pages/Book a Session.html">Book a Session</a></li> 
                         <li><a href="pages/Become a Tutor.html">Become a Tuter</a></li> 
                         <li><a href="pages/FAQ's.html">Blog</a></li>
